Working code for create instances and kubernetes installation

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -5,8 +5,8 @@ deprecation_warnings=False
 ask_pass=False
 roles_path= ./roles
 force_valid_group_names = ignore
-private_key_file= ./ansible
-remote_user=kubernetes
+private_key_file= ./ansible.pem
+remote_user=ec2-user
 
 [privilege_escalation]
 become=True
