--- a/roles/ec2/vars/main.yml
+++ b/roles/ec2/vars/main.yml
@@ -6,12 +6,12 @@ instance_tag:
         - slave2
 
 python_pkgs:
-#        - boto
+        - boto
         - boto3
 
 sg_name: Allow_All_SG
 region_name: eu-north-1
 subnet_name: subnet-06b8e4edc7e62a62f
-ami_id: ami-0ac001e37d0d00e35
+ami_id: ami-0ac001e37d0d00e35 
 keypair: ansible
-instance_flavour: t3.nano
+instance_flavour: t3.micro
