Complete working code for deploying kubernetes cluster in single region

--- a/roles/ec2/vars/main.yml
+++ b/roles/ec2/vars/main.yml
@@ -14,4 +14,4 @@ region_name: eu-north-1
 subnet_name: subnet-06b8e4edc7e62a62f
 ami_id: ami-0ac001e37d0d00e35 
 keypair: ansible
-instance_flavour: t3.micro
+instance_flavour: t3.small
