--- a/roles/ec2/tasks/main.yml
+++ b/roles/ec2/tasks/main.yml
@@ -8,9 +8,9 @@
 
 - name: Creating Security Group for K8s Cluster
   ec2_group:
-    name: "{{ sg_name }}"
+    name: "{{ item.sg_name }}"
     description: Security Group for allowing all port
-    region: "{{ region_name }}"
+    region: "{{ item.region_name }}"
     aws_access_key: "{{ access_key }}"
     aws_secret_key: "{{ secret_key }}"
     rules:
@@ -19,25 +19,26 @@
     rules_egress:
     - proto: all
       cidr_ip: 0.0.0.0/0
+  with_items: "{{ launching_vars }}"
 
 - name: Launching three EC2 instances on AWS
   ec2:
-    key_name: "{{ keypair }}"
-    instance_type: "{{ instance_flavour }}"
-    image: "{{ ami_id }}"
-    group: "{{ sg_name }}"
+    key_name: "{{ item.keypair }}"
+    instance_type: "{{ item.instance_flavour }}"
+    image: "{{ item.ami_id }}"
+    group: "{{ item.sg_name }}"
     count: 1
-    vpc_subnet_id: "{{ subnet_name }}"
+    vpc_subnet_id: "{{ item.subnet_name }}"
     assign_public_ip: yes
-    region: "{{ region_name }}"
+    region: "{{ item.region_name }}"
     state: present
     aws_access_key: "{{ access_key }}"
     aws_secret_key: "{{ secret_key }}"
     instance_tags:
-      Name: "{{ item }}"
+      Name: "{{ item.instance_tag }}"
     wait: yes
   register: ec2
-  loop: "{{ instance_tag }}"
+  loop: "{{ launching_vars }}"
 
 - name: Add 1st instance to host group ec2_master
   add_host:
