Migrate to ubuntu instances, setup wireguard server and clients, WIP: Manually assign keys and connect slave nodes to master, Deploy web app and collect metrics

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,12 +1,13 @@
 [defaults]
 host_key_checking=False
 command_warnings=False
+callback_whitelist = profile_tasks
 deprecation_warnings=False
 ask_pass=False
 roles_path= ./roles
 force_valid_group_names = ignore
 private_key_file= ./ansible.pem
-remote_user=ec2-user
+remote_user=ubuntu
 
 [privilege_escalation]
 become=True
