--- a/roles/k8s_master/tasks/main.yml
+++ b/roles/k8s_master/tasks/main.yml
@@ -2,35 +2,53 @@
 # tasks file for k8s_master
 
 # Adding kubernetes repo from base url using gpg keys
-- name: Add kubeadm repositories on Master Node
-  yum_repository:
-    name: kube
-    description: Kubernetes repo
-    baseurl: https://packages.cloud.google.com/yum/repos/kubernetes-el7-$basearch
-    enabled: 1
-    gpgcheck: 1
-    gpgkey: https://packages.cloud.google.com/yum/doc/yum-key.gpg https://packages.cloud.google.com/yum/doc/rpm-package-key.gpg
+- name: install APT Transport HTTPS
+  apt:
+    name: apt-transport-https
+    state: present
+ 
+- name: add Kubernetes apt-key
+  apt_key:
+    url: https://packages.cloud.google.com/apt/doc/apt-key.gpg
+    state: present
+ 
+- name: add Kubernetes' APT repository
+  apt_repository:
+    repo: deb http://apt.kubernetes.io/ kubernetes-xenial main
+    state: present
+    filename: 'kubernetes'
 
 # Installing 'docker', 'kubeadm' and 'iproute-tc' on master node 
 - name: Installing Docker & kubeadm on Master Node
   package:
     name:
-      - docker
       - kubeadm
-      - iproute-tc
+      - iproute2
     state: present
 
-# Starting and enabling the docker and kubelet services on master node. we maybe have a question why kubelet is run on master node?
-# The reason for running kubelet on master node is that kubeadm uses containers (pods) to deploy etcd and the api server components. 
+# Starting and enabling the docker on master node.
+- name: enabling Docker on Master Node
+  apt_key:
+    url: https://download.docker.com/linux/ubuntu/gpg
+    state: present
+
+- name: ensure docker registry is available
+  apt_repository: repo='deb https://download.docker.com/linux/ubuntu bionic stable' state=present
+
+- name: ensure docker and dependencies are installed
+  apt: name=docker-ce update_cache=yes
+
+# Starting kubelet on master node. we maybe have a question on why kubelet is run on master node?
+# The reason for running kubelet on master node is that, kubeadm uses containers (pods) to deploy etcd and the api server components. 
 # For this, static manifests are created as yaml-files which are picked up by the kubelet on the master node 
 # to provide the infrastructure pods. An added benefit is that you have the master node metrics available from the kubernetes api.
-- name: Staring & enabling Docker & kubelet on Master Node
+- name: Staring kubelet on Master Node
   service:
-    name: "{{ item }}"
+    name: kubelet
     state: started
     enabled: yes
-  loop: "{{ service_names }}"
 
+# Pulling all the images required for k8s master on master node.
 - name: Pulling the images of k8s master
   command: kubeadm config images pull
 
@@ -70,9 +88,27 @@
 # A token creation command for slave nodes. This command is used to get the token for the slave node to join the cluster.
 # Using “register” the output of the “command” module is stored in a variable called “token”.
 # Now this token variable contain the command that we need to run on slave node, so that it joins the master node.
-- name: Creating token for Slave
-  command: kubeadm token create  --print-join-command
-  register: token
+# - name: Creating token for Slave
+#   command: kubeadm token create  --print-join-command
+#   register: token
+
+- name: install wireguard client
+  apt:
+    name: wireguard
+    state: present
+    update_cache: yes
+
+- name: generate public and private key
+  shell:
+    cmd: umask 077 && wg genkey | sudo tee /etc/wireguard/privatekey | wg pubkey | sudo tee /etc/wireguard/publickey
+
+- name: create client wireguard config
+  template:
+    dest: /etc/wireguard/wg0.conf
+    src: roles/k8s_master/templates/wg0.conf.j2
+    owner: root
+    group: root
+    mode: '0600'
 
 # Cleaning caches on nodes RAM's. The “shell” module used here to clean the buffer cache on the master node,
 # because while doing the setup it will create lots of temporary data on RAM
