--- a/roles/ec2/tasks/main.yml
+++ b/roles/ec2/tasks/main.yml
@@ -25,6 +25,18 @@
       from_port: 51820
       to_port: 51820
       cidr_ip: 0.0.0.0/0
+    - proto: udp
+      from_port: 1194
+      to_port: 1194
+      cidr_ip: 0.0.0.0/0
+    - proto: tcp
+      from_port: 80
+      to_port: 80
+      cidr_ip: 0.0.0.0/0
+    - proto: tcp
+      from_port: 443
+      to_port: 443
+      cidr_ip: 0.0.0.0/0
     rules_egress:
     - proto: all
       cidr_ip: 0.0.0.0/0
@@ -38,6 +50,7 @@
     image: "{{ item.ami_id }}"
     group: "{{ item.sg_name }}"
     count: 1
+    #vpc_id: "{{ item.vpc_peer }}"
     vpc_subnet_id: "{{ item.subnet_name }}"
     assign_public_ip: yes
     region: "{{ item.region_name }}"
